@@ -1,3 +1,6 @@
+2000-11-26  Max Horn  <max@quendi.de>
+	* mouse.cc: mouse is now positioned correctly directly after creation
+
 2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* gamewin.cc: fixed problem with "journey onward" right after "create new game"
 
